apps/home-assistant/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`home-assistant.192.168.1.155.sslip.io`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
